// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders correctly renders correctly when disabled 1`] = `
<label
  className="monday-style-toggle_wrapper monday-style-toggle_wrapper--disabled"
>
  <span
    className="monday-style-toggle_text"
  >
    Off
  </span>
  <input
    aria-checked={true}
    checked={true}
    className="monday-style-toggle_input"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="monday-style-toggle_toggle monday-style-toggle_toggle--selected"
  />
  <span
    className="monday-style-toggle_text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly when labels are hidden 1`] = `
<label
  className="monday-style-toggle_wrapper"
>
  <input
    aria-checked={true}
    checked={true}
    className="monday-style-toggle_input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="monday-style-toggle_toggle monday-style-toggle_toggle--selected"
  />
</label>
`;

exports[`Toggle renders correctly renders correctly when selection defined by default selected (off)  1`] = `
<label
  className="monday-style-toggle_wrapper"
>
  <span
    className="monday-style-toggle_text"
  >
    Off
  </span>
  <input
    aria-checked={false}
    checked={false}
    className="monday-style-toggle_input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="monday-style-toggle_toggle dummy-class-name monday-style-toggle_toggle--not-selected"
  />
  <span
    className="monday-style-toggle_text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly when selection defined by default selected (on)  1`] = `
<label
  className="monday-style-toggle_wrapper"
>
  <span
    className="monday-style-toggle_text"
  >
    Off
  </span>
  <input
    aria-checked={true}
    checked={true}
    className="monday-style-toggle_input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="monday-style-toggle_toggle dummy-class-name monday-style-toggle_toggle--selected"
  />
  <span
    className="monday-style-toggle_text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly when selection defined by isSelected (off) 1`] = `
<label
  className="monday-style-toggle_wrapper"
>
  <span
    className="monday-style-toggle_text"
  >
    Off
  </span>
  <input
    aria-checked={false}
    checked={false}
    className="monday-style-toggle_input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="monday-style-toggle_toggle dummy-class-name monday-style-toggle_toggle--not-selected"
  />
  <span
    className="monday-style-toggle_text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly when selection defined by isSelected (on) 1`] = `
<label
  className="monday-style-toggle_wrapper"
>
  <span
    className="monday-style-toggle_text"
  >
    Off
  </span>
  <input
    aria-checked={true}
    checked={true}
    className="monday-style-toggle_input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="monday-style-toggle_toggle dummy-class-name monday-style-toggle_toggle--selected"
  />
  <span
    className="monday-style-toggle_text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly with aria controls 1`] = `
<label
  className="monday-style-toggle_wrapper"
>
  <span
    className="monday-style-toggle_text"
  >
    Off
  </span>
  <input
    aria-checked={true}
    aria-controls="aria controls"
    checked={true}
    className="monday-style-toggle_input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="monday-style-toggle_toggle monday-style-toggle_toggle--selected"
  />
  <span
    className="monday-style-toggle_text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly with empty props 1`] = `
<label
  className="monday-style-toggle_wrapper"
>
  <span
    className="monday-style-toggle_text"
  >
    Off
  </span>
  <input
    aria-checked={true}
    checked={true}
    className="monday-style-toggle_input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="monday-style-toggle_toggle monday-style-toggle_toggle--selected"
  />
  <span
    className="monday-style-toggle_text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly with not default offOverrideText 1`] = `
<label
  className="monday-style-toggle_wrapper"
>
  <span
    className="monday-style-toggle_text"
  >
    TestOff
  </span>
  <input
    aria-checked={true}
    checked={true}
    className="monday-style-toggle_input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="monday-style-toggle_toggle monday-style-toggle_toggle--selected"
  />
  <span
    className="monday-style-toggle_text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly with not default onOverrideText 1`] = `
<label
  className="monday-style-toggle_wrapper"
>
  <span
    className="monday-style-toggle_text"
  >
    Off
  </span>
  <input
    aria-checked={true}
    checked={true}
    className="monday-style-toggle_input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="monday-style-toggle_toggle monday-style-toggle_toggle--selected"
  />
  <span
    className="monday-style-toggle_text"
  >
    TestOn
  </span>
</label>
`;
